[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/MoonTab.gd" type="Script" id=1]

[node name="Moon" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1492.0
margin_bottom = 24.0

[node name="MoonVisCheckBox" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 71.0
margin_bottom = 24.0
text = "Visible"

[node name="MoonColorPickerButton" type="ColorPickerButton" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 75.0
margin_right = 1492.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_top = 28.0
margin_right = 1492.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxPos" type="HBoxContainer" parent="."]
margin_top = 52.0
margin_right = 1492.0
margin_bottom = 76.0

[node name="XLabel" type="Label" parent="HBoxPos"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
text = "X Position"

[node name="MoonXPosSpinBox" type="SpinBox" parent="HBoxPos"]
unique_name_in_owner = true
margin_left = 68.0
margin_right = 142.0
margin_bottom = 24.0
min_value = -20.0
max_value = 20.0
step = 0.01

[node name="VSeparator" type="VSeparator" parent="HBoxPos"]
margin_left = 146.0
margin_right = 150.0
margin_bottom = 24.0

[node name="YLabel" type="Label" parent="HBoxPos"]
margin_left = 154.0
margin_top = 5.0
margin_right = 217.0
margin_bottom = 19.0
text = "Y Position"

[node name="MoonYPosSpinBox" type="SpinBox" parent="HBoxPos"]
unique_name_in_owner = true
margin_left = 221.0
margin_right = 295.0
margin_bottom = 24.0
min_value = -20.0
max_value = 20.0
step = 0.01

[node name="ReferenceRect2" type="ReferenceRect" parent="."]
margin_top = 80.0
margin_right = 1492.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxSize" type="HBoxContainer" parent="."]
margin_top = 104.0
margin_right = 1492.0
margin_bottom = 128.0

[node name="MoonSizeLabel" type="Label" parent="HBoxSize"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Moon Size"

[node name="MoonSizeSpinBox" type="SpinBox" parent="HBoxSize"]
unique_name_in_owner = true
margin_left = 70.0
margin_right = 144.0
margin_bottom = 24.0
min_value = 0.1
max_value = 10.0
step = 0.01
value = 0.1

[connection signal="toggled" from="HBoxContainer/MoonVisCheckBox" to="." method="_on_MoonVisCheckBox_toggled"]
[connection signal="color_changed" from="HBoxContainer/MoonColorPickerButton" to="." method="_on_MoonColorPickerButton_color_changed"]
[connection signal="value_changed" from="HBoxPos/MoonXPosSpinBox" to="." method="_on_MoonXPosSpinBox_value_changed"]
[connection signal="value_changed" from="HBoxPos/MoonYPosSpinBox" to="." method="_on_MoonYPosSpinBox_value_changed"]
[connection signal="value_changed" from="HBoxSize/MoonSizeSpinBox" to="." method="_on_MoonSizeSpinBox_value_changed"]
